--- a/src/assets/style/post_modal.css
+++ b/src/assets/style/post_modal.css
@@ -180,19 +180,25 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    padding-left: 1rem;
+    padding: 0 1rem;
+    color: var(--default-black);
     word-wrap: break-word;
     overflow-x: hidden;
     overflow-wrap: break-word;
 }
 
 .comment-header {
-    display: flex;
-    flex-direction: row;
+    gap: 0.5rem
+}
+
+.comment-date {
+    font-size: 0.8rem;
+    font-weight: 200;
 }
 
 .comment-content {
     flex: 1;
+    font-weight: 300;
 }
 
 /* .reply_list {
@@ -201,17 +207,21 @@
 
 .write-comment-form {
     width: 100%;
-    height: 15%;
+    height: 10%;
     /* bottom: 100%; */
 }
 
-.write-comment-form>form {
+#comment_form {
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-rows: 2fr 1fr;
+    gap: 0.3rem
 }
 
 #input_comment {
-    width: 100%;
+    width: 80%;
+}
+
+#submit_comment_btn {
+    flex: 1;
+    height: 100%;
 }
